# pymgui

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  conda_requirements.txt  readme.md
pymgui/: __init__.py  _cimgui.py  button.py  cimgui_types.h  font_atlas.py  pymgui.py  slider.py  types.py  window.py
samples/: pymgui_demo.py
samples/cimgui_app/: CMakeLists.txt  main.cpp
samples/vispy/: animate_shape.py  start.py
scripts/: copy_binaries_to_pythondir.py
tests/: test_create_imgui_types.py
